[package]
name = "toss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
parse_postman_collection = "0.2.4"
postman_collection = "0.3.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
