[package]
name = "toss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
parse_postman_collection = "0.2.4"
postman_collection = "0.3.1"
ratatui = "0.30.0"
regex = "1.10.6"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.3.0"
tokio = { version = "1.50.0", features = ["full"] }
tui-syntax-highlight = "0.2.0"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
