[package]
name = "toss-api"
version = "0.1.2"
edition = "2024"
authors = ["Parth Gajjar <gajjarparth09@gmail.com>"]
description = "A Vim-inspired TUI and CLI API client for exploring and testing endpoints"
license = "GPL-3.0-only"
repository = "https://github.com/ghostp13409/toss"
homepage = "https://github.com/ghostp13409/toss"
readme = "README.md"
keywords = ["tui", "cli", "api-client", "vim", "rest"]
categories = ["command-line-utilities", "network-programming", "development-tools"]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
parse_postman_collection = "0.2.4"
postman_collection = "0.3.1"
ratatui = "0.30.0"
regex = "1.10.6"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.3.0"
tokio = { version = "1.50.0", features = ["full"] }
tui-syntax-highlight = "0.2.0"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true # Reduces binary size significantly
